# stop-super-speeders-hackathon

./: .gitignore  LICENSE  LICENSE_PLATE_BUG_FIX.md  README.md  Untitled-1.ipynb  app.py  nyc_speeding_violations_over_18_months.csv  pyproject.toml  test.py  test_license_plate_fix.py
Evitable/: .gitignore  README.md  analyze_2025.py  analyze_data.py  docker-compose.yml  package-lock.json  package.json  verify_phase2.py  verify_upload.py
Evitable/backend/: Dockerfile  main.py  requirements.txt
Evitable/frontend/: package-lock.json  package.json
Evitable/notebooks/: Hackathon.ipynb
Evitable/scripts/: debug_drivers.py  debug_harmonization.py  download_data.py  inspect_schema.py  inspect_test_schema.py
Evitable/seeds/: point_values.csv
backend/: app.py
backend/sql/: 01_schema.sql
backend/src/: __init__.py  cleaning.py  ingestion.py  super_speeder_detector.py
backend/tests/: test_super_speeder_detector.py
docs/: BACKEND.md  DATA.md  FRONTEND.md  NOTEBOOKS.md  data_alignment_issues.md
frontend/templates/: driver_details.html  error.html  results.html
notebooks/: 02_analysis.ipynb  Hackathon.ipynb  README.md  RNCleaning.py  data_merge_strategy.py  genai_mapping.ipynb
notebooks/sql/: find_new_driver_violators.sql  find_new_vehicle_violators.sql
project/Stop-Super-Speeders-main-2/: .gitignore  README.md  (+22 more)
scripts/: genai_mapping.py  nyc_traffic_violation_code_mappings.json  nyc_traffic_violations_etl.py  run_pipeline.py  traffic_violations_column_mappings.json
src/: super_speeder_detector.py
templates/: index.html  resources.html  results.html
(+36 files in other folders)
